2007-03-05  Sebastien Pouliot  <sebastien@ximian.com>

	* SymmetricAlgorithmTransformTest.cs: Add test cases for #81008 by
	looking at the encrypted/decrypted block length when TransformBlock is
	called with different MoO and paddings.

2007-02-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* HashAlgorithmTest.cs: Convert to NUnit 2.2 format.
	* HMACMD5Test.cs: Convert to NUnit 2.2 format.
	* HMACRIPEMD160Test.cs: Convert to NUnit 2.2 format.
	* HMACSHA1Test.cs: Convert to NUnit 2.2 format.
	* HMACSHA256Test.cs: Convert to NUnit 2.2 format.
	* HMACSHA384Test.cs: Convert to NUnit 2.2 format. Add test cases from
	RFC4231 using the correct block size (128) and the "legacy" size (64).
	* HMACSHA512Test.cs: Convert to NUnit 2.2 format. . Add test cases from
	RFC4231 using the correct block size (128) and the "legacy" size (64).
	* KeyedHashAlgorithmTest.cs: Convert to NUnit 2.2 format.
	* SHA1CryptoServiceProviderTest.cs: Convert to NUnit 2.2 format.
	* SHA1Test.cs: Convert to NUnit 2.2 format.
	* SHA256ManagedTest.cs: Convert to NUnit 2.2 format.
	* SHA256Test.cs: Convert to NUnit 2.2 format.
	* SHA384ManagedTest.cs: Convert to NUnit 2.2 format.
	* SHA384Test.cs: Convert to NUnit 2.2 format.
	* SHA512ManagedTest.cs: Convert to NUnit 2.2 format.
	* SHA512Test.cs: Convert to NUnit 2.2 format.

2007-02-14  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConfigTest.cs: Adjust line-endings.
	* CryptoStreamTest.cs: Adjust line-endings.
	* DESTest.cs: Adjust line-endings.
	* DSACryptoServiceProviderTest.cs: Adjust line-endings.
	* DSATest.cs: Adjust line-endings.
	* RSACryptoServiceProviderTest.cs: Adjust line-endings.

2007-01-08  Sebastien Pouliot  <sebastien@ximian.com>

	* DESCryptoServiceProviderTest.cs: Remove test cases for bug #80439
	as they are more general than DES and the default padding.
	* SymmetricAlgorithmTransformTest.cs: New. Extensive test cases for
	bug #80439, all symmtric ciphers (all block size), all mode of 