@@ -117,6 +117,7 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
+	[Category ("TargetJvmNotSupported")]
 	public void ConstructorCspParameters () 
 	{
 		CspParameters csp = new CspParameters (13, null, "Mono1024");
@@ -131,6 +132,7 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
+	[Category ("TargetJvmNotSupported")]
 	public void ConstructorKeySizeCspParameters () 
 	{
 		CspParameters csp = new CspParameters (13, null, "Mono512");
@@ -759,6 +761,7 @@ public class DSACryptoServiceProviderTest : Assertion {
 	//	http://msdn.microsoft.com/library/en-us/cpguide/html/cpcongeneratingkeysforencryptiondecryption.asp
 
 	[Test]
+	[Category ("TargetJvmNotSupported")]
 	public void Persistence_PersistKeyInCsp_False () 
 	{
 		CspParameters csp = new CspParameters (3, null, "Persistence_PersistKeyInCsp_False");
@@ -783,6 +786,7 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
+	[Category ("TargetJvmNotSupported")]
 	public void Persistence_PersistKeyInCsp_True () 
 	{
 		CspParameters csp = new CspParameters (3, null, "Persistence_PersistKeyInCsp_True");
@@ -803,6 +807,7 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
+	[Category ("TargetJvmNotSupported")]
 	public void Persistence_Delete () 
 	{
 		CspParameters csp = new CspParameters (3, null, "Persistence_Delete");
@@ -860,6 +865,7 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
+	[Category ("TargetJvmNotSupported")]
 	public void UseMachineKeyStore () 
 	{
 		// note only applicable when CspParameters isn't used - which don't
